feat: display dishes with sorting and pagination; menu page on restaurant dashboard